# Asteroids-cpp

./: CMakeLists.txt  README.md  README_BUILD.md  build.sh  build_instructions.txt
include/: Asteroid.hpp  AudioManager.hpp  Bullet.hpp  Collision.hpp  Constants.hpp  Entity.hpp  Game.hpp  Particle.hpp  Player.hpp  ResourceManager.hpp  UI.hpp
resources/fonts/: README.txt
resources/sounds/: README.txt
src/: Asteroid.cpp  AudioManager.cpp  Bullet.cpp  Collision.cpp  Entity.cpp  Game.cpp  Particle.cpp  Player.cpp  ResourceManager.cpp  UI.cpp  main.cpp
